--- a/ios_game/platforms/ios/www/index.html
+++ b/ios_game/platforms/ios/www/index.html
@@ -36,13 +36,7 @@
         <title>Hello World</title>
     </head>
     <body>
-        <div class="app">
-            <h1>ROBIN OCH FREDDE</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
+        <div id="logo"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
