--- a/ios_game/platforms/ios/www/index.html
+++ b/ios_game/platforms/ios/www/index.html
@@ -37,6 +37,7 @@
     </head>
     <body>
         <div id="logo"></div>
+        <div id="startGame"></div>
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
     </body>
